--- a/index.html
+++ b/index.html
@@ -1,1 +1,77 @@
-<h1>lucid-kv.store</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="dns-prefetch" href="//fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin></lien>
+        <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,900&display=swap" rel="stylesheet">
+        <link rel="preload" href="https://github.com/lucid-kv/deploy-templates/blob/master/lucid.png?raw=true" as="image">
+        <style>
+        body
+        {
+            background-color: #1d1b26!important;
+            font-family: "Inter UI",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+            margin: 0;
+            font-size: 1rem;
+            font-weight: 400;
+            line-height: 1.5;
+            color: #EEEEEE;
+            text-align: left;
+            background-color: #fff;
+        }
+
+        .showcase
+        {
+            font-family: 'Noto Sans', sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            height: 95vh;
+        }
+
+        .showcase img
+        {
+            height: 40vh;
+            -webkit-filter: drop-shadow(5px 5px 5px rgb(17, 24, 20));
+            filter: drop-shadow(5px 5px 5px rgb(17, 24, 20));
+            animation: float 6s ease-in-out infinite;
+        }
+
+        .showcase h1
+        {
+            font-weight: 900;
+            font-size: 60pt;
+            margin: 20px 20px 0;
+        }
+
+        .showcase h2
+        {
+            font-size: 30pt;
+            margin: 0;
+            font-weight: 400;
+        }
+
+        @keyframes float {
+            0% {
+                -webkit-transform: translatey(0px);
+                        transform: translatey(0px);
+            }
+            50% {
+                -webkit-transform: translatey(-20px);
+                        transform: translatey(-20px);
+            }
+            100% {
+                -webkit-transform: translatey(0px);
+                        transform: translatey(0px);
+            }
+        }
+        </style>
+    </head>
+    <body>
+        <div class="showcase">
+            <img src="https://github.com/lucid-kv/deploy-templates/blob/master/lucid.png?raw=true" />
+            <h1>Lucid KV</h1>
+            <h2>Coming soon...</h2>
+        </div>
+    </body>
+</html>
