Use file CSS + Add meta

--- a/index.html
+++ b/index.html
@@ -1,75 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="utf-8" />
         <link rel="dns-prefetch" href="//fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin></lien>
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,900&display=swap" rel="stylesheet">
         <link rel="preload" href="https://github.com/lucid-kv/deploy-templates/blob/master/lucid.png?raw=true" as="image">
-        <style>
-        body
-        {
-            background-color: #1d1b26!important;
-            font-family: "Inter UI",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-            margin: 0;
-            font-size: 1rem;
-            font-weight: 400;
-            line-height: 1.5;
-            color: #EEEEEE;
-            text-align: left;
-            background-color: #fff;
-        }
-
-        .showcase
-        {
-            font-family: 'Noto Sans', sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            height: 95vh;
-        }
-
-        .showcase img
-        {
-            height: 40vh;
-            -webkit-filter: drop-shadow(5px 5px 5px rgb(17, 24, 20));
-            filter: drop-shadow(5px 5px 5px rgb(17, 24, 20));
-            animation: float 6s ease-in-out infinite;
-        }
-
-        .showcase h1
-        {
-            font-weight: 900;
-            font-size: 60pt;
-            margin: 20px 20px 0;
-        }
-
-        .showcase h2
-        {
-            font-size: 30pt;
-            margin: 0;
-            font-weight: 400;
-        }
-
-        @keyframes float {
-            0% {
-                -webkit-transform: translatey(0px);
-                        transform: translatey(0px);
-            }
-            50% {
-                -webkit-transform: translatey(-20px);
-                        transform: translatey(-20px);
-            }
-            100% {
-                -webkit-transform: translatey(0px);
-                        transform: translatey(0px);
-            }
-        }
-        </style>
+        <meta name="title" content="Lucid KV">
+        <meta name="description" content="High performance and distributed KV store accessible through an HTTP API.  🦀">
+        <meta name="keywords" content="lucid,kv,lucid kv,key-value,kv store,store,key-value store,lucid kv store,http,rest api,http kv store,key-value as a service">
+        <meta name="robots" content="index, follow">
+        <meta name="language" content="English">
+        <meta name="author" content="https://github.com/lucid-kv">
+        <meta name="twitter:site" content="lucid_kv" />
+        <meta name="twitter:title" content="Lucid KV" />
+        <meta name="twitter:description" content="@description" />
+        <meta name="twitter:image" content="@socialPreview" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta property="og:title" content="Lucid KV" />
+        <meta property="og:description" content="High performance and distributed KV store accessible through an HTTP API.  🦀" />
+        <meta property="og:image" content="https://image" />
+        <meta property="og:url" content="https://lucid-kv.store" />
+        <meta property="og:site_name" content="Lucid KV" />
+        <meta property="og:type" content="article" />
+        <meta name="Identifier-Url" content="https://lucid-kv.store" />
+        <link rel="canonical" href="https://lucid-kv.store" />
+        <meta name="theme-color" content="#1d1b26">
+        <link href="default.css" rel="stylesheet" />
     </head>
     <body>
         <div class="showcase">
-            <img src="https://github.com/lucid-kv/deploy-templates/blob/master/lucid.png?raw=true" />
+            <img src="lucid.png" />
             <h1>Lucid KV</h1>
             <h2>Coming soon...</h2>
         </div>
