Add ascii art and comments

--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
+<!--
+    ██╗    ██╗   ██╗ ██████╗██╗██████╗     ██╗  ██╗██╗   ██╗
+    ██║    ██║   ██║██╔════╝██║██╔══██╗    ██║ ██╔╝██║   ██║
+    ██║    ██║   ██║██║     ██║██║  ██║    ██╔═██╗ ╚██╗ ██╔╝
+    ██████╗╚██████╔╝╚██████╗██║██████╔╝    ██║  ██╗ ╚████╔╝
+    ╚═════╝ ╚═════╝  ╚═════╝╚═╝╚═════╝     ╚═╝  ╚═╝  ╚═══╝
+    
+    Official Repository: https://github.com/lucid-kv/lucid
+    Made by Clint.Network (https://twitter.com/clint_network)
+-->
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -7,7 +17,7 @@
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,900&display=swap" rel="stylesheet">
         <link rel="preload" href="https://github.com/lucid-kv/deploy-templates/blob/master/lucid.png?raw=true" as="image">
         <meta name="title" content="Lucid KV">
-        <meta name="description" content="High performance and distributed KV store accessible through an HTTP API.  🦀">
+        <meta name="description" content="High performance and distributed KV store accessible through an HTTP API. 🦀">
         <meta name="keywords" content="lucid,kv,lucid kv,key-value,kv store,store,key-value store,lucid kv store,http,rest api,http kv store,key-value as a service">
         <meta name="robots" content="index, follow">
         <meta name="language" content="English">
@@ -18,7 +28,7 @@
         <meta name="twitter:image" content="@socialPreview" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta property="og:title" content="Lucid KV" />
-        <meta property="og:description" content="High performance and distributed KV store accessible through an HTTP API.  🦀" />
+        <meta property="og:description" content="High performance and distributed KV store accessible through an HTTP API. 🦀" />
         <meta property="og:image" content="https://image" />
         <meta property="og:url" content="https://lucid-kv.store" />
         <meta property="og:site_name" content="Lucid KV" />
@@ -27,6 +37,8 @@
         <link rel="canonical" href="https://lucid-kv.store" />
         <meta name="theme-color" content="#1d1b26">
         <link href="default.css" rel="stylesheet" />
+        <link rel="icon" type="image/png" href="lucid.png" />
+        <title>Lucid KV | High performance and distributed KV store accessible through an HTTP API. 🦀</title>
     </head>
     <body>
         <div class="showcase">
