Use social preview

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <meta name="author" content="https://github.com/lucid-kv">
         <meta name="twitter:site" content="lucid_kv" />
         <meta name="twitter:title" content="Lucid KV" />
-        <meta name="twitter:description" content="@description" />
-        <meta name="twitter:image" content="@socialPreview" />
+        <meta name="twitter:description" content="High performance and distributed KV store accessible through an HTTP API. 🦀" />
+        <meta name="twitter:image" content="https://lucid-kv.store/preview.jpg" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta property="og:title" content="Lucid KV" />
         <meta property="og:description" content="High performance and distributed KV store accessible through an HTTP API. 🦀" />
