--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         <div class="showcase">
             <img src="lucid.png" />
             <h1>Lucid KV</h1>
-            <h2>Coming soon...</h2>
+            <p>Lucid is an high performance and distributed KV store<br />accessible through an HTTP API. 🦀</p>
+            <!-- <h2>Coming soon...</h2> -->
         </div>
     </body>
 </html>
