View GitHub button

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link rel="dns-prefetch" href="//fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin></lien>
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
         <link rel="preload" href="https://github.com/lucid-kv/deploy-templates/blob/master/lucid.png?raw=true" as="image">
         <meta name="title" content="Lucid KV">
         <meta name="description" content="High performance and distributed KV store accessible through an HTTP API. 🦀">
@@ -45,6 +46,7 @@
             <img src="lucid.png" />
             <h1>Lucid KV</h1>
             <p>Lucid is an high performance and distributed KV store<br />accessible through an HTTP API. 🦀</p>
+            <a class="btn" href="https://github.com/lucid-kv/lucid"><i class="fab fa-github"></i>&nbsp; View Repository</a>
             <!-- <h2>Coming soon...</h2> -->
         </div>
     </body>
