--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="dns-prefetch" href="//fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin></lien>
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,900&display=swap" rel="stylesheet">
