Add documentation button

--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
             <img src="lucid.png" />
             <h1>Lucid KV</h1>
             <p>Lucid is an high performance and distributed KV store<br />accessible through an HTTP API. 🦀</p>
-            <a class="btn" href="https://github.com/lucid-kv/lucid"><i class="fab fa-github"></i>&nbsp; View Repository</a>
-            <!-- <h2>Coming soon...</h2> -->
+            <div>
+                <a class="btn fill" href="https://github.com/lucid-kv/lucid"><i class="fab fa-github"></i>&nbsp; View Repository</a>&nbsp;&nbsp;&nbsp;
+                <a class="btn " href="https://github.com/lucid-kv/lucid"><i class="fab fa-github"></i>&nbsp; Official Documentation</a>
+            </div>
         </div>
     </body>
 </html>
