--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h1>Lucid KV</h1>
             <p>Lucid is an high performance and distributed KV store<br />accessible through an HTTP API. 🦀</p>
             <div>
-                <a class="btn fill" href="https://github.com/lucid-kv/lucid"><i class="fab fa-github"></i>&nbsp; View Repository</a>&nbsp;&nbsp;&nbsp;
+                <a class="btn fill" href="https://github.com/lucid-kv/lucid"><i class="fab fa-github"></i>&nbsp; View Repository</a>
                 <a class="btn " href="https://github.com/lucid-kv/lucid"><i class="fab fa-github"></i>&nbsp; Official Documentation</a>
             </div>
         </div>
