Change documentation icon

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <p>Lucid is an high performance and distributed KV store<br />accessible through an HTTP API. 🦀</p>
             <div>
                 <a class="btn fill" href="https://github.com/lucid-kv/lucid"><i class="fab fa-github"></i>&nbsp; View Repository</a>
-                <a class="btn " href="https://docs.lucid-kv.store/"><i class="fab fa-github"></i>&nbsp; Official Documentation</a>
+                <a class="btn " href="https://docs.lucid-kv.store/"><i class="fas fa-book"></i>&nbsp; Official Documentation</a>
             </div>
         </div>
     </body>
