--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
         <link rel="preload" href="https://github.com/lucid-kv/deploy-templates/blob/master/lucid.png?raw=true" as="image">
         <meta name="title" content="Lucid KV">
-        <meta name="description" content="High performance and distributed KV store accessible through an HTTP API. 🦀">
+        <meta name="description" content="Lucid is currently in a development stage but we want to achieve a fast, secure and distributed key-value store accessible through an HTTP API, we also want to propose persistence, encryption, WebSocket streaming, replication and a lot of features. 🦀">
         <meta name="keywords" content="lucid,kv,lucid kv,key-value,kv store,store,key-value store,lucid kv store,http,rest api,http kv store,key-value as a service">
         <meta name="robots" content="index, follow">
         <meta name="language" content="English">
         <meta name="author" content="https://github.com/lucid-kv">
         <meta name="twitter:site" content="lucid_kv" />
         <meta name="twitter:title" content="Lucid KV" />
-        <meta name="twitter:description" content="High performance and distributed KV store accessible through an HTTP API. 🦀" />
+        <meta name="twitter:description" content="Lucid is currently in a development stage but we want to achieve a fast, secure and distributed key-value store accessible through an HTTP API, we also want to propose persistence, encryption, WebSocket streaming, replication and a lot of features. 🦀" />
         <meta name="twitter:image" content="https://lucid-kv.store/preview.jpg" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta property="og:title" content="Lucid KV" />
-        <meta property="og:description" content="High performance and distributed KV store accessible through an HTTP API. 🦀" />
+        <meta property="og:description" content="Lucid is currently in a development stage but we want to achieve a fast, secure and distributed key-value store accessible through an HTTP API, we also want to propose persistence, encryption, WebSocket streaming, replication and a lot of features. 🦀" />
         <meta property="og:image" content="https://image" />
         <meta property="og:url" content="https://lucid-kv.store" />
         <meta property="og:site_name" content="Lucid KV" />
