Add Google Analytiks

--- a/index.html
+++ b/index.html
@@ -52,5 +52,14 @@
                 <a class="btn " href="https://docs.lucid-kv.store/"><i class="fas fa-book"></i>&nbsp; Official Documentation</a>
             </div>
         </div>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-157256133-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-157256133-1');
+</script>
     </body>
 </html>
